# cura-binary-data

./: CMakeLists.txt  CPackConfig.cmake  build-marlin-firmwares.sh
cura/resources/firmware/: Gladiola-Single-or-Flexystruder-LBHexagon-1.1.0.2_4c01271.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.34_b0facd5.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.40_5af33c0.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.44_198b138.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.55_a0799ea.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.57_acae436.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.58_aae387f.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.60_ca04281.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.63_46b6c4f.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.64_6353ccb.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.68_9129996.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.70_578391eff.hex  Marlin_EinsyMini2LCD_AerostruderV2_1.1.5.71_ac85819cc.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.34_b0facd5.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.40_5af33c0.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.44_198b138.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.55_a0799ea.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.57_acae436.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.58_aae387f.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.60_ca04281.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.63_46b6c4f.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.64_6353ccb.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.68_9129996.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.70_578391eff.hex  Marlin_EinsyMini2_AerostruderV2_1.1.5.71_ac85819cc.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.34_b0facd5.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.40_5af33c0.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.44_198b138.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.55_a0799ea.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.57_acae436.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.58_aae387f.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.60_ca04281.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.63_46b6c4f.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.64_6353ccb.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.68_9129996.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.70_578391eff.hex  Marlin_Mini2LCD_AerostruderV2_1.1.5.71_ac85819cc.hex  Marlin_Mini2LCD_Aerostruder_1.1.5.12_5cc626c.hex  Marlin_Mini2LCD_Aerostruder_1.1.5.14_edcb340.hex  Marlin_Mini2LCD_Aerostruder_1.1.5.16_6766c27.hex  (+581 more)
